--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <div class="div-titulo">
         <h1>CRUD local</h1>
     </div>
-    <div class="container">
+
+    <div class="contenedor">
+
         <div class="div-formulario">
-            <form action="#" class="formulario">
+            <form action="#" id="formulario">
                 <input type="text" id="nombre" placeholder="Ingrese un no9mbre">
                 <input type="text" id="puesto" placeholder="Ingrese un puesto">
                 <button type="submit" id="btnAgregar">Agregar</button>
             </form>
         </div>
 
-        <div class="div-list">
+        <div class="div-listado">
             <h2>Listado Empleados</h2>
             <div class="div-empleados">
 
